--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "facerecog",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://18.237.118.43:4000",
   "dependencies": {
    
     "clarifai": "^2.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^4.0.3", 
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
